Fix alignment (clean layout wip)

--- a/cubedash/static/base.sass
+++ b/cubedash/static/base.sass
@@ -29,7 +29,7 @@ body
     color: $bold_highlight
     font-size: 0.86em
     margin: 30px auto
-    padding: 30px 20px
+    padding: 52px 20px
     max-width: 1024px
 
 .content-wrapper
@@ -108,12 +108,12 @@ header
 #logo
     padding: 0 15px
     position: absolute
-    top: -40px
-    right: 15px
+    top: -64px
+    right: 31px
     
     //opacity: 0.7
     img
-        height: 80px
+        height: 100px
     
 .header-wrapper
     &::after
@@ -276,6 +276,8 @@ label
     select
         padding: 6px
 
+.chart-timeline
+    padding: 15px
 .chart-timeline-bars
     font-size: 0
     height: 50px
@@ -381,4 +383,5 @@ label
 
 .dataset-info
     background-color: $panel2_color
+    margin: 10px
     padding: 15px
